--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "license": "ISC",
   "scripts": {
-    "dev": "nuxt",
+    "dev-client": "nuxt",
+    "dev-server": "nodemon server",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -17,8 +18,12 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "nuxt": "^2.15.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
+    "sass": "^1.34.0",
+    "sass-loader": "^10.1.1"
+  }
 }
