--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "license": "ISC",
   "scripts": {
-    "dev-client": "nuxt",
-    "dev-server": "nodemon server",
+    "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -19,7 +18,8 @@
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.15.1",
     "nodemon": "^2.0.15",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue-chat-scroll": "^1.4.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
